    (LP: #376890)
  * Fixed i18n errors in progress_page.py, thanks Adi Roiban (LP: #376925)
  * Fixed untranslatable string, thanks Adi Roiban (LP: #376457)
  * Spin-off of pypack, which turns a script into a self-contained
    directory with all required dependencies, might be useful to others
  * Now using grub2
  * Fixed typos in pypack
  * Updated grubutil to rev 31

  [ Michael Casadevall ]
  * Added support for UNR
  * Modified isolist.ini to represent new casper filename; capser.lz for lzma
    compressed initramfses

  [ Evan Dandrea ]
  * Add support for Kubuntu Netbook Edition (LP: #402850).
  * Fix typos for netbook images in data/isolist.ini.
  * Support dashes in project names.  Thanks Steve Kowalik!

 -- Evan Dandrea <evand@ubuntu.com>  Wed, 22 Jul 2009 14:44:15 +0100

wubi (9.04) jaunty; urgency=low

  [ Agostino Russo ]
  * Initial revision
  * Hello world, we have a window showing
  * Fixed loop on quit
  * Fixed tools
  * Added logging support
  * Reorganized commandline arguments
  * Improved progress object
  * Added data dir
  * Added win32 wizard base page class
  * Added mappings
  * Initial win32 page layout
  * Using basic window as panel
  * Refactored shared_backend.py into common/backend.py & friends
  * Added metalink parser
  * Removed testing metalink code
  * Added progress page
  * Improved quit mechanism
  * Added tasklist as a more general replacement of the progress object
  * Revised tool scripts
  * Added windows system info detection
  * Added installation page (partially implemented)
  * Minor GUI layout changes
  * Added installation finish page
  * Modified code to support Python 2.3 (for licensing and size reasons)
  * Added bittornado source importer
  * Added ipython setup
  * Bumped version to 9.04
  * Added required binaries (will be compiled at a later stage)
  * Added uninstallation page
  * Added pylauncher
  * Added BitTorrent source
  * Added documentation and licenses
  * Connected download managers