@@ -1,6 +1,6 @@
 #This file is modified at runtime by bootmenu.nsh
 
-set default = 0
+set default=0
 echo -n "Press `ESC' for more boot options... "
 if sleep --verbose --interruptible 5 ; then
    set timeout=0
@@ -8,32 +8,29 @@ fi
 
 # TBD try to boot directly from kernel/initrd within the ISO via the grub2 loop module
 
+search -s -f -n $(kernel)
+
 menuentry "$(normal_mode_title)" {
-    search -s $(kernel)
     linux $(kernel) debian-installer/custom-installation=$(custom_installation_dir) iso-scan/filename=$(iso_path) automatic-ubiquity noprompt quiet splash  boot=casper ro debian-installer/locale=$(locale) console-setup/layoutcode=$(keyboard_layout) console-setup/variantcode=$(keyboard_variant) -- $(accessibility)
     initrd $(initrd)
 }
 
 menuentry "$(safe_graphic_mode_title)" {
-    search -s $(kernel)
     linux $(kernel) debian-installer/custom-installation=$(custom_installation_dir) iso-scan/filename=$(iso_path) automatic-ubiquity noprompt quiet splash  boot=casper ro debian-installer/locale=$(locale) console-setup/layoutcode=$(keyboard_layout) console-setup/variantcode=$(keyboard_variant) -- $(accessibility)
     initrd $(initrd)
 }
 
 menuentry "$(acpi_workarounds_title)" {
-    search -s $(kernel)
     linux $(kernel) debian-installer/custom-installation=$(custom_installation_dir) iso-scan/filename=$(iso_path) automatic-ubiquity noprompt debug debug-ubiquity boot=casper ro debian-installer/locale=$(locale) console-setup/layoutcode=$(keyboard_layout) console-setup/variantcode=$(keyboard_variant) -- $(accessibility) acpi=off noapic nolapic
     initrd $(initrd)
 }
 
 menuentry "$(verbose_mode_title)" {
-    search -s $(kernel)
     linux $(kernel) debian-installer/custom-installation=$(custom_installation_dir) iso-scan/filename=$(iso_path) automatic-ubiquity noprompt debug debug-ubiquity boot=casper ro debian-installer/locale=$(locale) console-setup/layoutcode=$(keyboard_layout) console-setup/variantcode=$(keyboard_variant) -- $(accessibility)
     initrd $(initrd)
 }
 
 menuentry "$(demo_mode_title)" {
-    search -s $(kernel)
     linux $(kernel) iso-scan/filename=$(iso_path) quiet splash boot=casper ro debian-installer/locale=$(locale) console-setup/layoutcode=$(keyboard_layout) console-setup/variantcode=$(keyboard_variant) -- $(accessibility)
     initrd $(initrd)
 }
