@@ -1,40 +1,12 @@
-set timeout = 0
-set default = 0
+set pager=on
 
-menuentry "search /ubuntu/disks/boot/grub/grub.cfg" {
-    set fallback = 1
-    search -s /ubuntu/disks/boot/grub/grub.cfg
+if search -s -f -n /ubuntu/disks/boot/grub/grub.cfg; then
     configfile /ubuntu/disks/boot/grub/grub.cfg
-}
-
-menuentry "search /ubuntu/disks/boot/grub/grub.cfg" {
-    set fallback = 2
-    search -s /ubuntu/install/boot/grub/grub.cfg
+elif search -s -f -n /ubuntu/install/boot/grub/grub.cfg; then
     configfile /ubuntu/install/boot/grub/grub.cfg
-}
-
-menuentry "search /grub.cfg" {
-    set fallback = 3
-    search -s /grub.cfg
+elif search -s -f -n /grub.cfg; then
     configfile /grub.cfg
-}
+else
+    echo "Could not find a bootloader configuration"
+ fi
 
-menuentry "search /boot/grub/grub.cfg" {
-    set fallback = 4
-    search -s /boot/grub/grub.cfg
-    configfile /boot/grub/grub.cfg
-}
-
-menuentry "search /boot/grub.cfg" {
-    set fallback = 5
-    search -s /boot/grub.cfg
-    configfile /boot/grub.cfg
-}
-
-menuentry "reboot" {
-    reboot
-}
-
-menuentry "halt" {
-    halt
-}
